styles/intro.css
#languageBox
{
	position: absolute;
	left: 50%;
	top: 2em;
	transform: translate(-50%, -50%);

	font-family: "Roboto Slab", serif;
	text-wrap: nowrap;
}

#languageBox button
{
	text-decoration: none;
	margin-left: 0.2em;
	margin-right: 0.2em;
	padding: 0.5em;
	padding-left: 0.8em;
	padding-right: 0.8em;

	/* background: linear-gradient(var(--color-light) 0%, rgba(0, 0, 0, 0) 100%); */
	color: var(--color-highlight);
	border: 1px solid var(--color-light);
	border-radius: 0.6em;
	background: none;

	font-family: "Roboto Slab", serif;
	font-size: 1.5vh;
}
#languageBox button:hover, #languageBox button:disabled
{
	background-color: var(--color-highlight);
	color: var(--color-dark);
}
#languageBox button:enabled
{
	cursor: pointer;
}
#languageBox button:disabled
{
	pointer-events: none;
}

#introBox
{
	position: absolute;
	left: 50%;
	top: 40vh;
	transform: translate(-50%, -50%);
	width: 95%;
	font-family: "Roboto Slab", serif;
	color: white;
	text-align: center;
}

#introBox p
{
	margin: 0.2em;
	font-size: min(2vh, 100%);
}

#introBox h1
{
	font-size: min(6vh, 350%);
	font-weight: bold;
	margin: 0;
}
#introBox h2
{
	font-size: min(3vh, 140%);
	font-weight: normal;
	margin: 0;
}

#title
{
	margin-bottom: 5vh;
}

#play p
{
	opacity: 0.5;
}

#introBox button
{
	margin-top: 2vh;
	margin-bottom: auto;
	padding: 0;
	width: min(200px, 40vh, 90%);
	height: min(70px, 11vh);
	font-family: Nunito, sans-serif;
	font-size: min(200%, 5vh);
	font-weight: bold;
	border-radius: min(20px, 3vh);
	border: none;
}
#introBox button:disabled
{
	background-color: rgba(255, 255, 255, 0.3);
	color: var(--color-dark);
}
#introBox button:enabled
{
	/* background: linear-gradient(rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.4) 100%); */
	cursor: pointer;
	color: white;
	animation: animPulseButton 2s ease infinite;
	border: 0.4vh solid white;
	background: none;
}
#introBox button:hover:not([disabled])
{
	background-color: white;
	color: var(--color-dark);
}

@keyframes animPulseButton
{
	0% { box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.7); }
	80%, 100% { box-shadow: 0 0 0 20px rgba(255, 255, 255, 0); }
}

#introBox #noScript
{
	width: min(300px, 90%);
	margin: auto;
	margin-top: 1.4em;
	padding: 10px;
	font-family: "Roboto Slab", serif;
	text-align: center;
	color: black;
	background-color: orange;
	border: 2px dashed black;
}

#loading
{
	position: relative;
}

#loadingText, #playText
{
	font-family: "Roboto Slab", serif;
	text-align: center;
	/* color: var(--color-dark); */
}

/* https://www.w3schools.com/howto/howto_css_loader.asp */
#loadingSpinner
{
	position: absolute;
	left: min(75px, 16vh);
	top: max(-6px, -1vh);
	border: min(70px, 1vh) solid rgba(225, 225, 225, 0.3);
	border-top: min(70px, 1vh) solid white;
	border-right: min(70px, 1vh) solid white;
	border-radius: 50%;
	width: min(40px, 7vh);
	height: min(40px, 7vh);
	animation: loadingSpin 2s linear infinite;
	z-index: -1;
}
@keyframes loadingSpin
{
	0% { transform: rotate(0deg); }
	100% { transform: rotate(360deg); }
}

#locIntroTitle1, #locIntroTitle2, #locIntroTitle3, #locIntroGame, #locIntroSound, #playButton
{
	opacity: 0;
	animation: animFadeIn 2s ease-out forwards;
}

#locIntroTitle1	{ animation-delay: 0.5s; }
#locIntroTitle2	{ animation-delay: 1.5s; }
#locIntroTitle3	{ animation-delay: 2.5s; }
#locIntroGame	{ animation-delay: 4.0s; }
#locIntroSound	{ animation-delay: 4.0s; }
#playButton		{ animation-delay: 4.0s; }

.introBoxRefresh
{
	opacity: 0;
	animation: animFadeIn 1s ease-out forwards;
}

